[tool.poetry]
name = "attention"
version = "0.1.0"
description = ""
authors = ["Vaibhav Kumar <vaibhavk992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
